fixed home jumbo background image on mobile

--- a/main.css
+++ b/main.css
@@ -624,3 +624,9 @@ textarea {
   margin-top: 10px;
   border-top: 1px solid #2d2d2d;
 }
+
+@media only screen and (max-device-width: 1024px) {
+  #homeJumbotron {
+    background-attachment: scroll;
+  }
+}
